--- a/main-cv.tex
+++ b/main-cv.tex
@@ -73,13 +73,15 @@
 
 \input{commons/switches}
 
-\ifdefined\ifChinese
-% pass
-\else
-\newif\ifChinese
-\fi
+%------------------------------------------
+% defined in main.tex
+% uncomment to make main-cv.tex compilable
 
+% \newif\ifChinese
 % \Chinesetrue
+
+%------------------------------------------
+
 \HighSchoolfalse
 
 % more switches can be found in commons/switches.tex
