--- a/main-research-statement.tex
+++ b/main-research-statement.tex
@@ -28,13 +28,15 @@
 \newif\ifTeaching
 \newif\ifMisc
 
-\ifdefined\ifChinese
-% pass
-\else
-\newif\ifChinese
-\fi
+%------------------------------------------
+% defined in main.tex
+% uncomment to make 
+% main-research-statement.tex compilable
 
+% \newif\ifChinese
 % \Chinesetrue
+
+%------------------------------------------
 
 %---------------------------------------------------------
 % header
